# proxybear

./: Cargo.toml  LICENSE  README.md  build.rs
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release.yml
bundle/: ProxyBear.icns  macos-info.plist
docs/superpowers/specs/: 2026-06-27-auto-connect-design.md
src/: config.rs  main.rs  proxy.rs  settings.rs  stats.rs  tray.rs
src/app/: icons.rs  logging.rs  mod.rs  platform.rs  presentation.rs  proxy_control.rs  stats.rs  tray.rs
src/config/: mod.rs
src/proxy/: mod.rs  session.rs  socks.rs  ssh.rs  tunnel.rs
src/settings/: log_tail.rs  mod.rs  view.rs
src/settings/view/: logs.rs  settings_tab.rs
