[package]
name = "proxybear"
version = "0.1.5"
edition = "2024"
description = "Native macOS menu-bar SSH SOCKS proxy."

[dependencies]
anyhow = "1.0"
env_logger = "0.11"
log = "0.4"
directories = "6.0"
iced = { version = "0.14", default-features = false, features = ["wgpu", "image", "tokio"] }
native-dialog = "0.9.7"
objc2 = "0.6.4"
objc2-app-kit = "0.3.2"
objc2-foundation = "0.3.2"
russh = "0.61.2"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.52", features = ["io-util", "macros", "net", "rt-multi-thread", "sync"] }
toml = "1.0"
tray-icon = { version = "0.24.1", default-features = false }

[build-dependencies]
resvg = { version = "0.47.0", default-features = false }

[package.metadata.bundle]
name = "ProxyBear"
identifier = "com.msdx321.proxybear"
icon = ["bundle/ProxyBear.icns"]
category = "public.app-category.utilities"
short_description = "Menu-bar SSH SOCKS proxy."
long_description = "A native macOS menu-bar app that runs an unauthenticated local SOCKS proxy over SSH."
osx_minimum_system_version = "11.0"
osx_info_plist_exts = ["bundle/macos-info.plist"]
